<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tgf.exhibition.RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.tgf.exhibition.widget.CircularImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_user_default" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/label_user_nickname"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etv_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tips_enter_nickname"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/label_user_sex"
            android:textSize="18dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_user_sex"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:checked="false"
                android:text="@string/label_female" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/lable_security"
                android:id="@+id/radioSecrecy"
                android:checked="false" />
        </RadioGroup>



    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_finish"
        style="@style/Widget.AppCompat.Button.Colored" />


</LinearLayout>
