<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="1dp">

    <com.tgf.exhibition.widget.ViewPagerIndicator
        android:id="@+id/id_vp_indicator"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="2dp"
        android:background="@color/panelBackgroud"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        my:item_count="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_dfk"
            style="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_item2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_dfw"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_item3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_dqr"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_finished"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Medium" />
    </com.tgf.exhibition.widget.ViewPagerIndicator>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>
</LinearLayout>
