<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tgf.exhibition.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/windowBackgroud"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/head_background"
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="50dp"
                    android:src="@mipmap/ic_login" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/moblie_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_moblie"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/verification_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_verification_code"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="number"
                            android:maxLines="1"
                            android:paddingRight="100dp"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_get_verification_code"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_height="40dp"
                        android:layout_gravity="right|top"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="0dp"
                        android:paddingBottom="0dp"
                        android:text="@string/action_get_verification_code"
                        android:textSize="16dp" />
                </FrameLayout>


                <Button
                    android:id="@+id/sign_in_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/done_text_color_dark"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/action_license"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="left|center_vertical">

                    <CheckBox
                        android:id="@+id/checkBox_license"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <TextView
                        android:id="@+id/agreement_text"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center_horizontal"
                        android:text="输入验证码表示同意《用户协议》" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</merge>
